--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,62 @@
+/* ====================================
+================= Header ==============
+======================================= */
 .header {
-  @include verticalFlex(center, center);
+	width: 100%;
+	height: 100%;
+	background-color: $lightBlue;
 }
-.is-active {
-  font-weight: bold;
-  color: $veryLightBlue;
+
+.header__content {
+	@include v-flex(center, center);
+	@include containerWidth_sm;
+}
+
+.header__title {
+	font-size: pxToRem(60);
+	color: $white;
+	text-decoration: none;
+
+	a:-webkit-any-link {
+		color: $white;
+		text-decoration: none;
+	}
+
+	.active {
+		color: $white;
+		text-decoration: none;
+	}
+}
+
+/* ===============================================
+============= MEDIA QUERIES ======================
+================================================= */
+@media (min-width: pxToRem(768)) {
+	.header__title {
+		font-size: pxToRem(75);
+	}
+
+	.header__content {
+		@include containerWidth_md;
+	}
+}
+
+@media (min-width: pxToRem(1024)) {
+	.header__title {
+		font-size: pxToRem(85);
+	}
+
+	.header__content {
+		@include containerWidth_lg;
+	}
+}
+
+@media (min-width: pxToRem(1400)) {
+	.header__title {
+		font-size: pxToRem(90);
+	}
+
+	.header__content {
+		@include containerWidth_xl_fixed;
+	}
 }
