--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,7 +4,18 @@
 @import "./base/functions";
 @import "./base/mixins/generic-mixins";
 @import "./base/mixins/button-mixins";
-
+/* ============== Helper Classes ================ */
+@import "./classes/h-classes";
+@import "./classes/js-classes";
 /* ================ Components ================== */
+@import "./components/main-app";
 @import "./components/header";
+@import "./components/expense-dashboard-page";
+@import "./components/expense-filters";
+@import "./components/react_dates_overrides";
 @import "./components/add-expense-page";
+@import "./components/add-expense-link";
+@import "./components/expense-summary";
+@import "./components/expense-list";
+@import "./components/expense-list-item";
+@import "./components/footer";
