--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@
 @import "./components/main-app";
 @import "./components/header";
 @import "./components/expense-dashboard-page";
+@import "./components/edit-expense-page";
 @import "./components/expense-filters";
 @import "./components/react_dates_overrides";
 @import "./components/add-expense-page";
