--- a/src/styles/components/_add-expense-link.scss
+++ b/src/styles/components/_add-expense-link.scss
@@ -2,53 +2,65 @@
 ============ Add Expense Button ========
 ======================================= */
 .add-expense-link {
-	width: pxToRem(120);
+	width: pxToRem(150);
 	height: pxToRem(36);
 	line-height: pxToRem(36);
-	background-color: $lightGreen;
+	background-color: $secondary-fg-color;
 	margin: $m-box-size 0;
 	font-size: pxToRem(14);
 	text-decoration: none;
-	color: $white;
+	color: $btn-txt-color;
 	text-align: center;
 	@include h-flex(center, center);
 	transition: background-color, .5s ease-in;
 
 	a:-webkit-any-link {
-		color: $white;
+		color: $btn-txt-color;
 		text-decoration: none;
 	}
 
 	.active {
-		color: $white;
+		color: $btn-txt-color;
 		text-decoration: none;
 	}
 
 	&:hover {
-		background-color: lighten($lightGreen, 3%);
+		background-color: lighten($secondary-fg-color, 3%);
+	}
+
+	&:focus {
+		outline: 2px solid $third-fg-color;
+		;
 	}
 }
 
 /* ==============================================
 ================ Media Queries ===================
 ================================================ */
+@media (min-width: pxToRem(480)) {
+	.add-expense-link {
+		margin: $l-box-size 0;
+	}
+}
+
 @media (min-width: pxToRem(768)) {
 	.add-expense-link {
 		font-size: pxToRem(16);
-		width: pxToRem(125);
+		width: pxToRem(180);
+		margin: $xl-box-size 0;
 	}
 }
 
 @media (min-width: pxToRem(1024)) {
 	.add-expense-link {
 		font-size: pxToRem(18);
-		width: pxToRem(130);
+		width: pxToRem(200);
+		margin: $xxl-box-size 0;
 	}
 }
 
 @media (min-width: pxToRem(1400)) {
 	.add-expense-link {
 		font-size: pxToRem(20);
-		width: pxToRem(135);
 	}
 }
