--- a/src/styles/components/_add-expense-page.scss
+++ b/src/styles/components/_add-expense-page.scss
@@ -10,7 +10,7 @@
 	font-size: pxToRem(28);
 	text-align: center;
 	margin: $l-box-size 0;
-	color: $lightBlue;
+	color: $heading-txt-color;
 }
 
 .form-wrapper {
@@ -40,20 +40,19 @@
 	font-size: pxToRem(14);
 
 	&:focus {
-		outline: 2px solid $lightPurple;
+		outline: 2px solid $secondary-fg-color;
 		outline-offset: -1px;
 	}
 }
 
 .add-expense-btn,
 .remove-expense-btn {
-	width: pxToRem(120);
+	width: pxToRem(150);
 	height: pxToRem(36);
 	line-height: pxToRem(36);
-	background-color: $lightGreen;
-	margin: $m-box-size 0;
+	background-color: $third-fg-color;
 	font-size: pxToRem(14);
-	color: $white;
+	color: $btn-txt-color;
 	border: none;
 	display: block;
 	text-align: center;
@@ -61,23 +60,58 @@
 	-webkit-appearance: none;
 	appearance: none;
 	transition: background-color, .5s ease-in;
-
-	&:hover {
-		background-color: lighten($lightGreen, 3%);
-	}
 }
 
 .add-expense-btn {
-	background-color: $lightGreen;
+	background-color: $secondary-fg-color;
+	align-self: flex-start;
+	margin-top: $m-box-size 0;
+
+	&:hover {
+		background-color: lighten($secondary-fg-color, 3%);
+	}
+
+	&:focus {
+		outline: 2px solid $third-fg-color;
+		;
+	}
 }
 
 .remove-expense-btn {
-	background-color: red;
+	background-color: $third-fg-color;
+	margin: $m-box-size 0;
+
+	&:hover {
+		background-color: lighten($third-fg-color, 3%);
+	}
+
+	&:focus {
+		outline: 2px solid $secondary-fg-color;
+		;
+	}
 }
 
 /* ==============================================
 ================ Media Queries ===================
 ================================================ */
+@media (min-width: pxToRem(480)) {
+	.expense-form__input {
+		margin: $l-box-size 0;
+	}
+
+	.expense-form__textarea {
+		margin: $l-box-size 0;
+	}
+
+	.add-expense-btn {
+		margin-top: $l-box-size 0;
+	}
+
+	.remove-expense-btn {
+		margin: $l-box-size 0;
+	}
+}
+
 @media (min-width: pxToRem(768)) {
 	.add-expense__title {
 		font-size: pxToRem(30);
@@ -96,16 +130,22 @@
 	.expense-form__input {
 		width: 45%;
 		font-size: pxToRem(16);
+		margin: $xl-box-size 0;
 	}
 
 	.expense-form__textarea {
 		font-size: pxToRem(16);
+		margin: $xl-box-size 0;
 	}
 
-	.add-expense-btn,
+	.add-expense-btn {
+		font-size: pxToRem(16);
+		width: pxToRem(180);
+	}
+
 	.remove-expense-btn {
 		font-size: pxToRem(16);
-		width: pxToRem(125);
+		width: pxToRem(180);
 	}
 }
 
@@ -121,16 +161,22 @@
 
 	.expense-form__input {
 		font-size: pxToRem(18);
+		margin: $xxl-box-size 0;
 	}
 
 	.expense-form__textarea {
 		font-size: pxToRem(18);
+		margin: $xxl-box-size 0;
 	}
 
-	.add-expense-btn,
+	.add-expense-btn {
+		font-size: pxToRem(18);
+		width: pxToRem(200);
+	}
+
 	.remove-expense-btn {
 		font-size: pxToRem(18);
-		width: pxToRem(130);
+		width: pxToRem(200);
 	}
 }
 
@@ -152,9 +198,11 @@
 		font-size: pxToRem(20);
 	}
 
-	.add-expense-btn,
+	.add-expense-btn {
+		font-size: pxToRem(20);
+	}
+
 	.remove-expense-btn {
 		font-size: pxToRem(20);
-		width: pxToRem(135);
 	}
 }
