--- a/src/styles/components/_expense-summary.scss
+++ b/src/styles/components/_expense-summary.scss
@@ -3,47 +3,46 @@
 ======================================= */
 .expense-summary {
 	width: 100%;
+	height: 100%;
 	margin-bottom: $m-box-size;
-	height: auto;
-	background-color: $lightPurple;
-	border: pxToRem(2) solid $white;
-	border-radius: pxToRem(25);
-	@include h-flex(space-between, center);
-	flex-wrap: nowrap;
+	@include h-flex(space-between, stretch);
 }
 
 .expense-summary__tile {
 	width: 50%;
-	height: 100%;
-	@include v-flex(center, space-between);
-	flex-wrap: nowrap;
+	height: auto;
+	@include v-flex(center, center);
 }
 
 .expense-summary__tile:nth-child(1) {
-	border-right: pxToRem(1) solid $white;
+	border-right: pxToRem(1) solid $btn-txt-color;
 }
 
 .expense-summary__tile:nth-child(2) {
-	border-left: pxToRem(1) solid $white;
+	border-left: pxToRem(1) solid $btn-txt-color;
 }
 
 .expense-summary__description {
 	width: 100%;
 	height: 50%;
-	color: $white;
+	display: block;
+	color: $summary-txt-color;
 	margin: 0;
 	padding: pxToRem(6) 0 pxToRem(2) 0;
 	text-align: center;
+	@include v-flex(flex-start, center);
 }
 
 .expense-summary__output {
 	width: 100%;
 	height: 50%;
-	color: darken($lightBlue, 25%);
+	display: block;
+	color: $summary-txt-color;
 	font-size: pxToRem(18);
 	margin: 0;
 	padding: pxToRem(2) 0 pxToRem(4) 0;
 	text-align: center;
+	@include v-flex(flex-end, center);
 }
 
 /* ==============================================
@@ -66,6 +65,14 @@
 @media (min-width: pxToRem(1024)) {
 	.expense-summary {
 		margin-bottom: $xl-box-size;
+	}
+
+	.expense-summary__description {
+		font-size: pxToRem(22);
+	}
+
+	.expense-summary__output {
+		font-size: pxToRem(30);
 	}
 }
 
