--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,8 +3,9 @@
 ================================================ */
 .footer {
 	width: 100%;
-	height: 20vh;
-	background-color: $lightGreen;
+	height: 15vh;
+	margin-top: $l-box-size;
+	background-color: $primary-fg-color;
 	@include h-flex(center, center);
 }
 
