--- a/src/styles/components/_main-app.scss
+++ b/src/styles/components/_main-app.scss
@@ -4,6 +4,6 @@
 main {
 	width: 100%;
 	min-height: 100vh;
-	background-color: $lightestSky;
+	background-color: $primary-bg-color;
 	@include v-flex(flex-start, space-between);
 }
